Feat: Auto init manager.conf

--- a/config/hypr/src/env/bind.conf
+++ b/config/hypr/src/env/bind.conf
@@ -1,5 +1,5 @@
 # LOCK
-bind = SUPER, L,exec, hyprlock
+bind = SUPER, L,exec, sudo systemctl suspend
 
 # terminal
 bind= CTRL ALT, T,exec, $Terminal
