--- a/config/hypr/src/env/bind.conf
+++ b/config/hypr/src/env/bind.conf
@@ -35,8 +35,8 @@ bind= SUPER, C, exec, /home/arch/.config/hypr/scripts/clash.sh open
 
 # volume
 bind= CTRL, F4, exec, pulsemixer --toggle-mute
-bind= CTRL, F5, exec, amixer set Master 10%- && bash /home/arch/.config/hypr/scripts/volume
-bind= CTRL, F6, exec, amixer set Master 10%+ && bash /home/arch/.config/hypr/scripts/volume
+bind= CTRL, F5, exec, amixer set Master 10%- 
+bind= CTRL, F6, exec, amixer set Master 10%+
 
 # fullscreen
 bind= CTRL, F11, exec, bash /home/arch/.config/hypr/scripts/tiling/fullscreen.sh
