Dots: Weekly Update

--- a/config/hypr/src/env/bind.conf
+++ b/config/hypr/src/env/bind.conf
@@ -2,6 +2,9 @@
 bind = SUPER, L,exec, hyprlock
 bind = SUPER SHIFT, L,exec, sudo systemctl suspend
 
+# Shutdown
+bind = CTRL SHIFT, L, exec, sudo shutdown now
+
 # terminal
 bind= CTRL ALT, T,exec, $Terminal
 
