--- a/config/hypr/settings.conf
+++ b/config/hypr/settings.conf
@@ -35,9 +35,9 @@ $InOpacity = 0.8
 #----------------------------------
 
 # Padding (Between 2 Windows)
-$GapsIn = 4
+$GapsIn = 0 #4
 # Margin
-$GapsOut = 7
+$GapsOut = 0 #7
 
 #----------------------------------
 #  5. Blur
@@ -55,7 +55,7 @@ $BlurNoise = 0.07
 #----------------------------------
 
 # Border Radius
-$Rounding = 20
+$Rounding = 0 #20
 
 #----------------------------------
 #  7. Defaults
