--- a/config/hypr/src/env/bind.conf
+++ b/config/hypr/src/env/bind.conf
@@ -43,7 +43,7 @@ bind= CTRL, F5, exec, amixer set Master 10%-
 bind= CTRL, F6, exec, amixer set Master 10%+
 
 # fullscreen
-bind= CTRL, F11, exec, bash /home/arch/.config/hypr/scripts/tiling/fullscreen.sh
+bind= CTRL, F11, fullscreen,
 
 # change wallpaper
 bind= SUPER, D,exec, ~/.config/hypr/scripts/switchwall.sh
