--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -28,14 +28,14 @@ ecosystem:no_update_news = true
 # Login
 # exec-once = hyprlock
 
-exec-once = hyprpm enable hyprscrolling
-general:layout = scrolling
+# exec-once = hyprpm enable hyprscrolling
+# general:layout = scrolling
 
-plugin {
-    hyprscrolling {
-        column_width = 0.55
-        fullscreen_on_one_column = true
-        focus_fit_method = 1
-        follow_focus = true
-    }
-}
+# plugin {
+    # hyprscrolling {
+        # column_width = 0.55
+        # fullscreen_on_one_column = true
+        # focus_fit_method = 1
+        # follow_focus = true
+    # }
+# }
