--- a/config/hypr/src/display/winrule.conf
+++ b/config/hypr/src/display/winrule.conf
@@ -15,8 +15,8 @@
         # windowrule            =         float,      ^(rofi)
         # windowrule            =         float,      ^(imv)$ 
     # windowrulev2
-        windowrulev2          =         animation slide,        class:^(rofi)$ 
-        windowrulev2          =         move 100%-433 53,       class:^(wofi)$,title:^(clippick)$
+        # windowrulev2          =         animation slide,        class:^(rofi)$ 
+        # windowrulev2          =         move 100%-433 53,       class:^(wofi)$,title:^(clippick)$
     # Layer Rule
         # layerrule             =         blur , waybar
         # layerrule             =         ignorezero , waybar
