--- a/config/cava/config
+++ b/config/cava/config
@@ -20,6 +20,7 @@ method = ncurses
 style = stereo
 
 [color]
+theme = "noctalia"
 # Color gradient for bars using template variables
 gradient = 1
 gradient_count = 8
