--- a/config/hypr/src/env/bind.conf
+++ b/config/hypr/src/env/bind.conf
@@ -30,7 +30,7 @@ bind= ALT, TAB, togglefloating,
 bind= SUPER, SPACE, global, caelestia:launcher#exec, $Launcher
 
 # toggle split
-# bind= SUPER, J,togglesplit,
+bind= SUPER, J,togglesplit,
 
 # screenshot
 # bind= SUPER SHIFT, S,exec, bash /home/arch/.config/hypr/scripts/screen_cut.sh
@@ -49,20 +49,19 @@ bind= CTRL, F6, exec, amixer set Master 10%+
 bind= CTRL, F11, fullscreen,
 
 # change wallpaper
-# bind= SUPER, D,exec, ~/.config/hypr/scripts/switchwall.sh
+bind= SUPER, D,exec, ~/.config/hypr/scripts/switchwall.sh
 
 # move focus
-$mainMod = SUPER
-# bind= SUPER, left,movefocus,l
-# bind= SUPER, right,movefocus,r
+bind= SUPER, left,movefocus,l
+bind= SUPER, right,movefocus,r
 bind= SUPER, up,movefocus,u
 bind= SUPER, down,movefocus,d
-bind = $mainMod, right, layoutmsg, move +col
-bind = $mainMod, left, layoutmsg, move -col
-bind = $mainMod SHIFT, right, layoutmsg, movewindowto r
-bind = $mainMod SHIFT, left, layoutmsg, movewindowto l
-bind = $mainMod SHIFT, up, layoutmsg, movewindowto u
-bind = $mainMod SHIFT, down, layoutmsg, movewindowto d
+# bind = $mainMod, period, layoutmsg, move +col
+# bind = $mainMod, comma, layoutmsg, move -col
+# bind = $mainMod SHIFT, period, layoutmsg, movewindowto r
+# bind = $mainMod SHIFT, comma, layoutmsg, movewindowto l
+# bind = $mainMod SHIFT, up, layoutmsg, movewindowto u
+# bind = $mainMod SHIFT, down, layoutmsg, movewindowto d
 
 # colorpicker
 bind= CTRL, P,exec, bash /home/arch/.config/hypr/scripts/colorpicker
